Correcciones api swagger del properties controller
